# rfc3161-client

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Makefile  NOTES.md  README.md  TESTING.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  lint.yml  tests.yml  zizmor.yml
rust/: Cargo.toml
rust/src/: certificate.rs  cms.rs  common.rs  crl.rs  csr.rs  extensions.rs  lib.rs  name.rs  oid.rs  tsp.rs  util.rs
rust/tsp-asn1/: Cargo.toml
rust/tsp-asn1/src/: certificate.rs  cms.rs  lib.rs  tsp.rs
scripts/: check_tsa.py  update_fixtures.py
src/rfc3161_client/: __init__.py  base.py  errors.py  tsp.py  verify.py
src/rfc3161_client/_rust/: __init__.pyi
src/rfc3161_client/_rust/verify/: __init__.pyi
src/sigstore_tsp/: __init__.py  base.py  errors.py  impl.py  tsp.py  verify.py
src/sigstore_tsp/_rust/: __init__.pyi
test/: common.py  test_base.py  test_init.py  test_rust.py  test_tsp.py  test_verify.py
test/fixtures/: other_request.der  other_response.tsr  response.tsr  ts_chain.pem
test/fixtures/sigstage/: README.md  request.der  response-invalid-signature.tsr  response-no-embedded-cert.tsr  response-sha256.tsr  response-sha384.tsr  response-sha512.tsr  ts_chain.pem
test/fixtures/sigstore.mock/: response-expired.tsr  ts_chain.pem
test/fixtures/test_tsa/: README.md  request.der
test/fixtures/unknown/: payload  ts_chain.pem
