[package]
name = "rfc3161-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rfc3161_client"
crate-type = ["cdylib"]

[dependencies]
tsp-asn1 = { path = "tsp-asn1" }
pyo3 = { version = "0.23.2", features = ["abi3"] }
asn1.workspace = true
self_cell = "1"
hex.workspace = true
sha2 = "0.10.8"
rand = "0.8.5"
cryptography-x509.workspace = true
openssl = { version = "0.10.68", features = ["vendored"] }

[features]
extension-module = ["pyo3/extension-module"]
