[package]
name = "rfc3161-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rfc3161_client"
crate-type = ["cdylib"]

[dependencies]
tsp-asn1 = { path = "tsp-asn1" }
pyo3 = { version = "0.25.0", features = ["abi3"] }
asn1.workspace = true
self_cell = "1"
hex.workspace = true
sha2 = "0.10.9"
rand = "0.9.1"
cryptography-x509.workspace = true
openssl = { version = "0.10.73", features = ["vendored"] }

[build-dependencies]
pyo3-build-config = { version = "0.25.0", features = ["resolve-config"] }

[features]
extension-module = ["pyo3/extension-module"]
