[package]
name = "rfc3161-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rfc3161_client"
crate-type = ["cdylib"]

[dependencies]
tsp-asn1 = { path = "tsp-asn1" }
pyo3 = { version = "0.28.3", features = ["abi3"] }
asn1.workspace = true
self_cell = "1"
hex.workspace = true
sha2 = "0.11.0"
rand = "0.10.0"
cryptography-x509.workspace = true
openssl = { version = "0.10.76", features = ["vendored"] }

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[features]
extension-module = ["pyo3/extension-module"]
