[package]
name = "tsp-asn1"
version = "0.0.1"
edition = "2021"
authors = [
    "Trail of Bits <opensource@trailofbits.com>"
]
publish = false

[lib]
name = "tsp_asn1"

[dependencies]
asn1 = "0.20"
cryptography-x509 = { git = "https://github.com/pyca/cryptography.git", rev = "4c72f368234e60a06e4a0beaf87be55940dd49c1" }

[dev-dependencies]
hex = "0.4"