[package]
name = "tsp-asn1"
version = "0.0.1"
edition = "2021"
authors = [
    "Trail of Bits <opensource@trailofbits.com>"
]
publish = false

[lib]
name = "tsp_asn1"

[dependencies]
asn1 = "0.20"
cryptography-x509 = { git = "https://github.com/pyca/cryptography.git", rev = "8f522feb12999085680ae224ede0b8756ea079a0" }

[dev-dependencies]
hex = "0.4"